# tutorial-flask-query-builder

./: app.py  db  pyproject.toml  seed.py
api/: base_resources.py  views.py
api/resources/: user.py
api/schemas/: user.py
filters/: user.py
sorts/: user.py
